# mcp_context_loading

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  verify_db.py
.github/workflows/: python-app.yml
be/: base.py  dependencies.py
be/categories/: __init__.py  db.py  exceptions.py  model.py  router.py  service.py
be/chat_context/: __init__.py  agent.py  deps.py
be/chat_tools/: __init__.py  agent.py  deps.py  tools.py
be/chat_tools_speakeasy/: README.md  simulation.py
be/context/: README.md  __init__.py  dispatch.py  loader.py  protocols.py
be/orders/: __init__.py  db.py  exceptions.py  model.py  router.py  service.py
be/products/: __init__.py  db.py  exceptions.py  model.py  router.py  service.py
be/reviews/: __init__.py  db.py  exceptions.py  model.py  router.py  service.py
be/users/: __init__.py  db.py  exceptions.py  model.py  router.py  service.py
benchmarks/: __init__.py  compare_agents.py  compare_simple.py  compare_with_db.py
benchmarks/results/: benchmark_results.json  benchmark_results_db.json
rdb/: __init__.py  alembic.ini  config.py  enums.py  models.py  seed.py
rdb/alembic/: env.py
rdb/alembic/versions/: 5219908b3396_initial_schema_with_six_tables.py
research/: 01_twilio_mcp_performance_testing.md  02_anthropic_context_engineering.md  03_speakeasy_token_reduction.md  04_rag_vs_function_calling.md  05_mcp_token_optimization_strategies.md  06_aws_data_driven_agentic_patterns.md  README.md
